# fitd-residualvm

./: AUTHORS  COPYING  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  configure  configure.ac  depcomp
m4/: acx_pthread.m4  ax_check_gl.m4  ax_check_glu.m4  ax_lang_compiler_ms.m4
src/: Makefile.am  Makefile.in  actor.cpp  actor.h  actorList.cpp  actor_list.cpp  actor_list.h  aitdBox.c  aitdBox.cpp  aitdBox.h  aitd_box.cpp  aitd_box.h  anim.c  anim.cpp  anim.h  animAction.c  animAction.cpp  anim_action.cpp  anim_action.h  common.h  config.h.in  cosTable.cpp  cosTable.h  cos_table.cpp  cos_table.h  cvars.h  debugFont.cpp  debugFont.h  debug_font.cpp  debug_font.h  debugger.c  debugger.cpp  debugger.h  evalVar.c  evalVar.cpp  evalVar.h  eval_var.cpp  eval_var.h  fileAccess.c  fileAccess.cpp  (+116 more)
src/common/: stream.h  textconsole.cpp  textconsole.h
win32/visual .net 2003/: FITD.vcproj
