bin_PROGRAMS = fitd 
.h.gch: 
	$(CXXCOMPILE) $<
fitd_SOURCES = \
common.h \
actorList.cpp actorList.h aitdBox.cpp aitdBox.h animAction.cpp animAction.h \
anim.cpp anim.h common.h config.h cosTable.cpp cosTable.h debugFont.cpp debugFont.h \
debugger.cpp debugger.h evalVar.cpp evalVar.h fileAccess.cpp fileAccess.h \
filestream.cpp fitd.cpp fitd.h floor.cpp floor.h fmopl.cpp fmopl.h font.cpp font.h hqr.cpp hqr.h input.cpp input.h \
inventory.cpp inventory.h life.cpp lifeMacroTable.cpp life.h life_2.cpp life_2.h lines.cpp main.cpp main.h \
mainLoop.cpp mainLoop.h music.cpp music.h object.cpp object.h \
osystem.h osystemSDL.cpp osystemSDL_GL.cpp pak.cpp pak.h polys.cpp \
resource.cpp resource.h renderer.cpp renderer.h room.cpp room.h sequence.cpp save.cpp save.h screen.cpp screen.h \
startupMenu.cpp startupMenu.h systemMenu.cpp systemMenu.h tatou.cpp tatou.h \
threadCode.cpp threadCode.h \
time.cpp ourtime.h track.cpp track.h unpack.cpp unpack.h vars.cpp vars.h \
version.cpp version.h videoMode.cpp videoMode.h zv.cpp zv.h 


